# ros2_ws

./: .gitignore  PROBLEM.md  README.md  main.py
.claude/: settings.json
.kilo/plans/: 1784302420016-random-qr-payload-spawner.md  1784302420016-restore-mission-fsm-regression.md  prompt-random-qr-payload.md
docs/: ARCHITECTURE.md  CHANGELOG.md  GUI-INTEGRATION.md  HOW-TO-RUN.txt  STATUS.md  VERIFICATION-CHECKLIST.md  thruster_config.md  thruster_positions.csv
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-07-17/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-18/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
install/: local_setup.sh  setup.sh
install/hydroships_gazebo/share/hydroships_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hydroships_gazebo/share/hydroships_gazebo/cmake/: hydroships_gazeboConfig.cmake
install/hydroships_gazebo/share/hydroships_gazebo/config/: bridge.yaml
install/hydroships_gazebo/share/hydroships_gazebo/launch/: sim.launch.py
install/hydroships_gazebo/share/hydroships_gazebo/worlds/: kki_arena.sdf  pool_empty.sdf
log/: latest_build
src/hydroships_bringup/: CMakeLists.txt
src/hydroships_bringup/launch/: hydroships_gui.launch.py  (+3 more)
src/hydroships_control/: package.xml  setup.cfg  setup.py
src/hydroships_description/: CMakeLists.txt
src/hydroships_description/config/: rov_params.yaml
src/hydroships_description/scripts/: estimate_mass_inertia.py
src/hydroships_description/urdf/: hydroships.urdf.xacro
src/hydroships_description/urdf/Model lain/: rov.urdf.xacro  rov_kki2026.urdf.xacro
src/hydroships_gazebo/: CMakeLists.txt  package.xml
src/hydroships_gazebo/config/: bridge.yaml
src/hydroships_gazebo/launch/: sim.launch.py
src/hydroships_gazebo/media/: qr_quad.mtl
src/hydroships_gazebo/scripts/: generate_qr.py  payload_spawner.py
src/hydroships_gazebo/worlds/: kki_arena.sdf  pool_empty.sdf
(+54 files in other folders)
