<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hydroships_gazebo</name>
  <version>0.1.0</version>
  <description>
    World kolam KKI 2026 + launch simulasi Gazebo Fortress dan jembatan ros_gz
    untuk ROV HYDROships.
  </description>

  <maintainer email="raisyapratama218006@gmail.com">HYDROships PPNS</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hydroships_description</exec_depend>
  <exec_depend>hydroships_control</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
